# surrogate-seismic-waves

./: .env  .gitattributes  .gitignore  README.md  phase0c_dipping_case_0_coeffs.npz  phase0c_dipping_case_1_coeffs.npz  phase0c_features.npz  phase0c_three_layer_case_0_coeffs.npz  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
experiments/GIFNO/: config.py  curriculum.py  data_loader.py  delta_env.sh  delta_full_lw_no_mine.sh  delta_full_r3_winner.sh  delta_migrate_data.sh  delta_paths.sh  delta_rsync_from_local.sh  delta_run_all.sh  delta_setup.sh  delta_sweep.sh  delta_sweep_rerun.sh  delta_train.sh  evaluate.py  lambda_secrets.env.example  lambda_train.sh  losses.py  main.py  metrics.py  model.py  pod_readout.py  radial_spectral_loss.py  savio_train.sh  spectral_layers.py  sweep_launch.py  sweep_variants.tsv  train.py  (+3 more)
experiments/GIFNO-FDO/: config.py  delta_sweep.sh  delta_sweep_rerun.sh  delta_train.sh  main.py  model.py  sweep_launch.py  sweep_variants_arch.tsv  sweep_variants_combo.tsv  sweep_variants_opt.tsv  train.py
experiments/GIFNO-FDO-LG/: config.py  delta_sweep.sh  delta_sweep_rerun.sh  delta_train.sh  eval_checkpoint.py  main.py  model.py  sweep_launch.py  sweep_variants_lg.tsv  train.py  transfer.py
experiments/GIFNO-FDO-XT/: SEED_CONDITIONAL.md  capability_check.py  config.py  delta_sweep.sh  delta_sweep_rerun.sh  delta_train.sh  eval_checkpoint.py  main.py  model.py  sweep_launch.py  sweep_variants_xt.tsv  train.py
experiments/GIFNO-FDO-XT-BOOST/: config.py  delta_sweep.sh  delta_train.sh  losses.py  main.py  model.py  sweep_launch.py  sweep_variants_boost.tsv  train.py  transfer.py
experiments/GIFNO-FDO-XT-HFNO/: config.py  delta_eval.sh  delta_sweep.sh  delta_sweep_rerun.sh  delta_train.sh  delta_train_full.sh  eval_checkpoint.py  main.py  model.py  sweep_launch.py  sweep_variants_hfno.tsv  train.py
experiments/GIFNO-FDO-XT-HFS/: config.py  delta_sweep.sh  delta_train.sh  main.py  model.py  sweep_launch.py  sweep_variants_hfs.tsv
experiments/GIFNO-FDO-XT-LOGLO-POD/: README.md  capability_check.py  config.py  delta_eval.sh  delta_profile.sh  delta_sweep.sh  delta_sweep_rerun.sh  delta_train.sh  delta_train_full.sh  eval_checkpoint.py  local_train.sh  main.py  model.py  profile_speed.py  sweep_launch.py  sweep_variants_loglo_pod.tsv  sweep_variants_loglo_pod_stability.tsv  train.py
wave_surrogate/: logging_setup.py
(+165 files in other folders)
