[project]
name = "surrogate-seismic-waves"
version = "0.1.0"
description = "Surrogate modeling of seismic wave propagation."
authors = [
    { name = "Kurt Walter Soncco Sinchi", email = "kurtwal98@berkeley.edu" },
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "jupyterlab",
    "wandb",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
]

[tool.setuptools]
packages = ["wave_surrogate"]

[tool.uv]
package = true