[project]
name = "surrogate-seismic-waves"
version = "0.1.0"
description = "Surrogate modeling of seismic wave propagation."
authors = [
    { name = "Kurt Walter Soncco Sinchi", email = "kurtwal98@berkeley.edu" },
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "jupyterlab",
    "jupyter",
    "wandb",
    "pyarrow>=21.0.0",
    "markupsafe==2.1.3",
    "dotenv>=0.9.9",
    "torch",
    "torchvision",
    "tqdm",
    "jax[cuda12]",
    "jax-ai-stack",
    "clu",
    "google-metrax",
    "geomloss",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
]

[tool.setuptools]
packages = ["wave_surrogate"]

[tool.uv]
package = true
extra-index-url = ["https://download.pytorch.org/whl/cu126"]